# projekt

./: CMakeLists.txt  Simulation.cpp  Simulation.h
Classes/: Account.h  Bill.h  Dish.cpp  Ingredient.cpp  Kitchen.cpp  Kitchen.h  Restaurant.cpp  Waiter.h
projekt_chmielik_szubzda_proi_2024l/: main.cpp  menu_file.json
projekt_chmielik_szubzda_proi_2024l/Classes/: Account.cpp  Bill.cpp  Dish.h  Ingredient.h  Menu.cpp  Menu.h  Recipe.cpp  Recipe.h  Restaurant.h  Shop.cpp  Shop.h  Table.h  Waiter.cpp
